# econix

./: .CMakeLists.txt.swp  .travis.yml  CMakeLists.txt  README.md  dockerstuff.sh  shippable.yml  uml.sh
Libraries/: .gitignore  CMakeLists.txt  Here is where Libraries should be stored.txt
cmake/: FindEvent.cmake
research/: page.html
sources/executable/: CMakeLists.txt  main.cpp
sources/testing/: .travis_build.sh  CMakeLists.txt  JsonToAndFromTest.cpp  JsonToAndFromTest.h  PacketVerifyTest.cpp  PacketVerifyTest.h  SimpleResourceTransactionTest.cpp  SimpleResourceTransactionTest.h  TestBase.h  main.cpp
sources/utility/: CMakeLists.txt  entity.h  transactionblob.cpp  transactionblob.h
